# Pybind_template

./: .gitignore  CMakeLists.txt  build.sh  main.py
csrc/: CMakeLists.txt  __init__.py  package.cpp
